--- a/frontend/src/app/components/workout-form/workout-form.component.scss
+++ b/frontend/src/app/components/workout-form/workout-form.component.scss
@@ -1,12 +1,9 @@
-.form-error {
-  color: red;
-}
+// .form-error {
+//   color: red;
+// }
 
 :host {
   display: block;
 }
 
-.--disabled {
-  cursor: not-allowed;
-  opacity: 0.4;
-}
+
